[package]
name = "stripe-openapi-codegen"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
edition = "2018"

[dependencies]
heck = "0.4.0"
lazy_static = "1"
reqwest = { version = "0.11", features = ["blocking"] }
regex = {version = "1", default-features = false, features = ["std", "perf"]}
serde_json = "1"
anyhow = "1.0.34"
tracing = "=0.1.29" # prevent valuable
log = "0.4.14"
tracing-subscriber = "=0.3.7" # prevent valuable
tracing-core="=0.1.21" # prevent valuable